overflow fixed

--- a/S_StarWarsMenu2/css/star.css
+++ b/S_StarWarsMenu2/css/star.css
@@ -7,6 +7,8 @@
 body {
 	background: #eee;
 	width: ;
+	overflow: hidden;
+
 }
 
 .artboard {
